2004-11-07  Leonard den Ottolander <leonard * den ottolander nl>

	* slint.c (slang_init): Allow upto 512 lines and cols if the
	SLang library can handle it.

2004-11-07  Roland Illig  <roland.illig@gmx.de>

	* key.c (use_8th_bit_as_meta): Use 8bit input as default.

	From Vladimir Nadvornik <nadvornik * suse cz>

2004-11-04  Mike Gorchak  <mike@malva.ua>

	* dir.c (file_type_to_num): Added initial support for the Special Named
	Files. They are displayed as block devices, but with '#' prefix in it's
	names. Needed on QNX Neutrino.
	* file.c (copy_file_file): Likewise.
	* fs.h: Likewise.
	* screen.c (string_file_type): Likewise.
	(file_compute_color): Likewise.
	* util.c (string_perm): Likewise.

	* pipethrough.c: Added sys/select.h if found according to config.h.

2004-11-04  Jindrich Novy  <jnovy@redhat.com>

	* screen.c (show_dir): A small fix to avoid a crash in show_dir() with
	a panel of more than 200 columns.

2004-11-03  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* file.c (make_symlink): Use g_strlcpy() instead of strcpy().

2004-11-03  Jindrich Novy  <jnovy@redhat.com>

	* subshell.c (do_subshell_chdir): Filter out a possible password from
	warning dialog.

	* command.c (do_cd_command): Likewise.

	* screen.c (panel_callback): Likewise.

	* util.c (path_trunc): Add function. path_trunc() is the same as 
	name_trunc(), but it deletes possible password from path for security
	reasons.

	* util.h: Add functions path_trunc().

	* filegui.c (file_progress_show_target): Filter out a possible password
	from dialog.
	(file_progress_show_deleting): Likewise.
	(file_mask_dialog): Likewise.

	* file.c (move_file_file): Likewise.
	(move_dir_dir): Likewise.
	(file_error): Likewise.
	(files_error): Likewise.
	(real_query_recursive): Likewise.

	* hotlist.c (add2hotlist): Typo fix.

2004-11-02  Pavel Tsekov  <ptsekov@gmx.net>

        * dialog.c (do_select_widget): Walk the whole widgets list looking
        for a widget accepting the focus.
