@@ -1,3 +1,7 @@
+2004-11-09  Jindrich Novy  <jnovy@redhat.com>
+
+	* filegui.c (file_mask_dialog): Fix memory leak.
+
 2004-11-07  Leonard den Ottolander <leonard * den ottolander nl>
 
 	* slint.c (slang_init): Allow upto 512 lines and cols if the
